--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,7 @@ services:
       - "9600:9600"
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+      TZ: Asia/Tokyo
     networks:
       - elk
     depends_on:
@@ -61,6 +62,8 @@ services:
         read_only: true
     ports:
       - "5601:5601"
+    environment:
+      TZ: Asia/Tokyo
     networks:
       - elk
     depends_on:
