--- a/logstash/pipeline/jp-insurances/logstash_insurance.conf
+++ b/logstash/pipeline/jp-insurances/logstash_insurance.conf
@@ -8,11 +8,11 @@ input {
 filter {
   csv {
     separator => ","
-    columns => ["id","web-scraper-order","company_year","type","title"]
-    # "name","content","sample","options"
+    columns => ["id","web-scraper-order","company_year","type","title","summary","sample_contract","options"]
   }
   mutate {
     split => { "type" => "/" }
+    split => { "options" => "/" }
     remove_field => [ "path", "host","@timestamp","message"]
   }
   mutate {
