changed the sample data format

--- a/logstash/pipeline/jp-insurances/logstash_insurance.conf
+++ b/logstash/pipeline/jp-insurances/logstash_insurance.conf
@@ -1,6 +1,6 @@
 input {
 	file {
-		path => "/usr/share/logstash/pipeline/jp-insurances/all_r1_es.csv"
+		path => "/usr/share/logstash/pipeline/jp-insurances/r1_es.csv"
 		start_position => "beginning"
 		sincedb_path => "/dev/null"
   }
@@ -8,21 +8,21 @@ input {
 filter {
   csv {
     separator => ","
-    columns => ["id","web-scraper-order","company_year","type","title","summary","sample_contract","options"]
+    columns => ["web-scraper-order","company","sub_type","title_year","summary","sample_contract","options","type"]
   }
   mutate {
-    split => { "type" => "/" }
+    split => { "sub_type" => "/" }
     split => { "options" => "/" }
     remove_field => [ "path", "host","@timestamp","message"]
   }
   mutate {
-    split => { "company_year" => ' '}
-    add_field => { "company" => "%{[company_year][0]}"}
+    split => { "title_year" => ' '}
+    add_field => { "title" => "%{[company_year][0]}"}
     add_field => { "year" => "%{[company_year][1]}"}
   }
   mutate {
     strip => ["title"]
-    remove_field => ["path", "host","@timestamp","message","company_year"]
+    remove_field => ["path", "host","@timestamp","message","title_year"]
   }
 }
 
@@ -34,7 +34,7 @@ output {
 		user => "elastic"
 		password => "changeme"
 		index => "insurances"
-		document_id => "%{id}"
+		document_id => "%{web-scraper-order}"
 	}
 	stdout {}
 }
