--- a/logstash/pipeline/jp-insurances/logstash_insurance.conf
+++ b/logstash/pipeline/jp-insurances/logstash_insurance.conf
@@ -17,8 +17,8 @@ filter {
   }
   mutate {
     split => { "title_year" => ' '}
-    add_field => { "title" => "%{[company_year][0]}"}
-    add_field => { "year" => "%{[company_year][1]}"}
+    add_field => { "title" => "%{[title_year][0]}"}
+    add_field => { "year" => "%{[title_year][1]}"}
   }
   mutate {
     strip => ["title"]
