reformat the year data

--- a/logstash/pipeline/jp-insurances/logstash_insurance.conf
+++ b/logstash/pipeline/jp-insurances/logstash_insurance.conf
@@ -16,7 +16,7 @@ filter {
     remove_field => [ "path", "host","@timestamp","message"]
   }
   mutate {
-    split => { "title_year" => ' '}
+    split => { "title_year" => '^'}
     add_field => { "title" => "%{[title_year][0]}"}
     add_field => { "year" => "%{[title_year][1]}"}
   }
