--- a/logstash/pipeline/jp-companies/logstash_company.conf
+++ b/logstash/pipeline/jp-companies/logstash_company.conf
@@ -1,6 +1,6 @@
 input {
 	file {
-		path => "/usr/share/logstash/pipeline/jp-companies/99_kokugai_all_20191031.xml"
+		path => "/usr/share/logstash/pipeline/jp-companies/13_tokyo_all_20191031_01.xml"
 		start_position => "beginning"
 		sincedb_path => "/dev/null"
     exclude => "*.gz"
@@ -46,7 +46,7 @@ output {
 		user => "elastic"
 		password => "changeme"
 		index => "companies"
-		document_id => "%{company_id}"
+		document_id => "%{corporateNumber}"
 	}
 	stdout {codec => rubydebug}
 }
