--- a/logstash/pipeline/jp-companies/logstash_company.conf
+++ b/logstash/pipeline/jp-companies/logstash_company.conf
@@ -20,16 +20,34 @@ filter {
         force_array => false
         target => "doc"
         xpath => [
+            "/corporation/sequenceNumber/text()", "sequenceNumber",
+            "/corporation/process/text()", "process",
+            "/corporation/correct/text()", "correct",
+            "/corporation/updateDate/text()", "updateDate",
+            "/corporation/changeDate/text()", "changeDate",
             "/corporation/corporateNumber/text()", "corporateNumber",
             "/corporation/name/text()", "name",
+            "/corporation/nameImageId/text()", "nameImageId",
+            "/corporation/kind/text()", "kind",
             "/corporation/prefectureName/text()", "prefectureName",
             "/corporation/cityName/text()", "cityName",
             "/corporation/streetNumber/text()", "streetNumber",
+            "/corporation/addressImageId/text()", "addressImageId",
+            "/corporation/prefectureCode/text()", "prefectureCode",
+            "/corporation/cityCode/text()", "cityCode",
             "/corporation/postCode/text()", "postCode",
             "/corporation/addressOutside/text()", "addressOutside",
+            "/corporation/closeDate/text()", "closeDate",
+            "/corporation/closeCause/text()", "closeCause",
+            "/corporation/successorCorporateNumber/text()", "successorCorporateNumber",
+            "/corporation/changeCause/text()", "changeCause",
             "/corporation/assignmentDate/text()", "assignmentDate",
-            "/corporation/furigana/text()", "furigana",
-            "/corporation/kind/text()", "kind"
+            "/corporation/latest/text()", "latest",
+            "/corporation/enName/text()", "enName",
+            "/corporation/enPrefectureName/text()", "enPrefectureName",
+            "/corporation/enCityName/text()", "enCityName",
+            "/corporation/enAddressOutside/text()", "enAddressOutside",
+            "/corporation/hihyoji/text()", "hihyoji"
         ]
     }
 
