--- a/logstash/pipeline/jp-companies/logstash_company.conf
+++ b/logstash/pipeline/jp-companies/logstash_company.conf
@@ -1,6 +1,6 @@
 input {
 	file {
-		path => "/usr/share/logstash/pipeline/jp-companies/13_tokyo_all_20191031_01.xml"
+		path => "/usr/share/logstash/pipeline/jp-companies/*.xml"
 		start_position => "beginning"
 		sincedb_path => "/dev/null"
     exclude => "*.gz"
@@ -47,6 +47,7 @@ filter {
             "/corporation/enPrefectureName/text()", "enPrefectureName",
             "/corporation/enCityName/text()", "enCityName",
             "/corporation/enAddressOutside/text()", "enAddressOutside",
+            "/corporation/furigana/text()", "furigana",
             "/corporation/hihyoji/text()", "hihyoji"
         ]
     }
