add a missing item

--- a/logstash/pipeline/jp-companies/logstash_company.conf
+++ b/logstash/pipeline/jp-companies/logstash_company.conf
@@ -47,6 +47,7 @@ filter {
             "/corporation/enPrefectureName/text()", "enPrefectureName",
             "/corporation/enCityName/text()", "enCityName",
             "/corporation/enAddressOutside/text()", "enAddressOutside",
+            "/corporation/addressOutsideImageId/text()","addressOutsideImageId",
             "/corporation/furigana/text()", "furigana",
             "/corporation/hihyoji/text()", "hihyoji"
         ]
