fix the issue about missing data

--- a/logstash/pipeline/jp-companies/logstash_company.conf
+++ b/logstash/pipeline/jp-companies/logstash_company.conf
@@ -9,6 +9,7 @@ input {
         pattern => "<corporation>" 
         negate => "true"
         what => "previous"
+        auto_flush_interval => 4
     }
   }
 }
