change to upsert mode

--- a/logstash/pipeline/jp-companies/logstash_company.conf
+++ b/logstash/pipeline/jp-companies/logstash_company.conf
@@ -1,6 +1,6 @@
 input {
 	file {
-		path => "/usr/share/logstash/pipeline/jp-companies/dailyUpdate/*.xml"
+		path => "/usr/share/logstash/pipeline/jp-companies/dailyUpdate/2019-11-01~2019-12-05_40.xml"
 		start_position => "beginning"
 		sincedb_path => "/dev/null"
     exclude => "*.gz"
@@ -55,7 +55,7 @@ filter {
     }
 
     mutate {
-      remove_field => ["path", "host","@timestamp","@version","message","tags","type"]
+      remove_field => ["path", "host","@timestamp","message","tags","type"]
     }
 }
 
@@ -67,6 +67,8 @@ output {
 		user => "elastic"
 		password => "changeme"
 		index => "companies"
+    action => "update"
+    doc_as_upsert => "true"
 		document_id => "%{corporateNumber}"
 	}
 	stdout {codec => rubydebug}
