changed csv format

--- a/logstash/pipeline/fp_faq/logstash_faq.conf
+++ b/logstash/pipeline/fp_faq/logstash_faq.conf
@@ -14,22 +14,28 @@ input {
 filter {
 	csv {
 		separator => ","
-		columns => ["question","answer","evidence"]
+		columns => ["topic","question","answer","evidence"]
 	}
 	mutate {
-		gsub => ["message", "\r\n", ""]
-		remove_field => ["path", "host","@timestamp","answer","evidence"]
+		gsub => ["message", "\r\n,", ""]
+		remove_field => ["path", "host","@timestamp","@version","answer","evidence"]
 	}
 	grok {
 		# break_on_match => "false"
 		match => [
-			"message","\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences}",
-			"message",	"\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences}",
-			"message",	"\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences}",
-			"message",	"\"%{DATA:answers}\",%{DATA:evidences}"
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{DATA:evidences},\"%{DATA:answers}\",%{GREEDYDATA:evidences}",
+			"message", "\"%{DATA:answers}\",%{GREEDYDATA:evidences}"
 			]
-		# overwrite => ["answer"]
-		remove_field => ["message","tags","@version"]
+		overwrite => ["message"]
+		remove_field => ["message"]
 	}
 	# ruby {
     #     code =>'
