--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -6,7 +6,7 @@ FROM docker.elastic.co/elasticsearch/elasticsearch:${ELK_VERSION}
 # Add your elasticsearch plugins setup here
 # Example: RUN elasticsearch-plugin install analysis-icu
 USER root
-
+RUN elasticsearch-plugin  install analysis-kuromoji
 RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
     && echo "Asia/Tokyo" > /etc/timezone \
     && chown elasticsearch:elasticsearch config/elasticsearch.yml
