--- a/kibana/config/kibana.yml
+++ b/kibana/config/kibana.yml
@@ -4,6 +4,7 @@
 #
 server.name: kibana
 server.host: "0"
+i18n.locale: "ja-JP"
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 xpack.monitoring.ui.container.elasticsearch.enabled: true
 
