--- a/logstash/pipeline/fp_faq/logstash_faq.conf
+++ b/logstash/pipeline/fp_faq/logstash_faq.conf
@@ -63,7 +63,7 @@ output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "elastic"
-		password => "changeme"
+		password => "p6zmi254"
 		index => "milize_fp_faq"
 		# document_id => "%{id}"
 	}
