--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - "9300:9300"
     environment:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      ELASTIC_PASSWORD: changeme
+      ELASTIC_PASSWORD: p6zmi254
     networks:
       - elk
     restart: unless-stopped
@@ -64,6 +64,7 @@ services:
       - "5601:5601"
     environment:
       TZ: Asia/Tokyo
+      # I18N_LOCALE: "ja-JP"
     networks:
       - elk
     depends_on:
