--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -9,4 +9,4 @@ http.host: "0.0.0.0"
 #
 xpack.monitoring.enabled: false 
 #xpack.monitoring.elasticsearch.username: elastic
-#xpack.monitoring.elasticsearch.password: changeme
+#xpack.monitoring.elasticsearch.password: p6zmi254
