--- a/logstash/pipeline/jp-insurances/logstash_insurance.conf
+++ b/logstash/pipeline/jp-insurances/logstash_insurance.conf
@@ -32,7 +32,7 @@ output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "elastic"
-		password => "changeme"
+		password => "p6zmi254"
 		index => "insurances"
 		document_id => "%{web-scraper-order}"
 	}
