--- a/logstash/pipeline/ml-latest-small/logstash_movies.conf
+++ b/logstash/pipeline/ml-latest-small/logstash_movies.conf
@@ -34,7 +34,7 @@ output {
 	elasticsearch {
 		hosts => "elasticsearch:9200"
 		user => "elastic"
-		password => "changeme"
+		password => "p6zmi254"
 		index => "movies"
 		document_id => "%{id}"
 	}
