--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -4,6 +4,11 @@
 #
 cluster.name: "docker-cluster"
 network.host: 0.0.0.0
+http.cors.enabled : true
+http.cors.allow-origin: "*"
+http.cors.allow-methods: "OPTIONS, HEAD, GET, POST, PUT, DELETE"
+http.cors.allow-headers: "Access-Control-Allow-Origin,x-csrf-token,authorization,content-type,accept,origin,x-requested-with"
+http.cors.allow-credentials: true
 
 ## Use single node discovery in order to disable production mode and avoid bootstrap checks
 ## see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
